--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ dependencies = [
     "langchain-community==0.3.25",
     "langchain-google-genai>=2.1.7",
     "langchain-groq>=0.3.6",
+    "langchain-huggingface>=0.3.0",
     "pymupdf==1.26.1",
     "pypdf==5.6.0",
     "python-dotenv==1.1.0",
     "rank-bm25==0.2.2",
+    "sentence-transformers>=5.0.0",
 ]
