--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "colorama>=0.4.6",
     "deepeval==3.1.0",
     "faiss-cpu==1.11.0",
     "langchain-community==0.3.25",
