--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-google-genai>=2.1.7",
     "langchain-groq>=0.3.6",
     "langchain-huggingface>=0.3.0",
+    "nltk>=3.9.1",
     "pandas>=2.3.1",
     "pymupdf==1.26.1",
     "pypdf==5.6.0",
