--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "deepeval==3.1.0",
     "faiss-cpu==1.11.0",
     "langchain-community==0.3.25",
+    "langchain-experimental>=0.3.4",
     "langchain-google-genai>=2.1.7",
     "langchain-groq>=0.3.6",
     "langchain-huggingface>=0.3.0",
